leptos-fluent-macros/tests/ui/leptos_fluent/failing/empty_parameter.stderr
error: Expected an expression building a line with 'key: value' or '[#...] key: value' format.
  --> tests/ui/leptos_fluent/failing/empty_parameter.rs:17:9
   |
17 |         : "foo",
   |         ^
